# community

.github/workflows/: build-extensions.yml  build-release.yml  extensions.json
extensions/moveit/: CMakeLists.txt  aica-package.toml  package.xml
extensions/topic_based_ros2_control/: aica-package.toml
